# GstD_EGLStream_PoC

./: Makefile  README.linux  meson.build
Ancillary/: evclient.c  evserver.c
Base/: base  base.c  meson.build
Common/: esUtil.c  esUtil.h
Consumer/: consumer  consumer.c  esUtil.c  esUtil.h  meson.build
GstDBase/: esUtil.c  gstd  gstd.c  meson.build
GstDConsumer/: gstd.c
GstDProducer/: esUtil.c  gstd  gstd.c  meson.build  producer.c
Producer/: esUtil.c  esUtil.h  meson.build  producer  producer.c
